--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^4.12.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.7",
